--- a/_config.yml
+++ b/_config.yml
@@ -18,18 +18,16 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Hagi Works
-email: h8a9g11i☆example.com　※☆を@に変更してください。
+title: Your awesome title
+email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-# Write an awesome description for your new site here. You can edit this
-# line in _config.yml. It will appear in your document head meta (for
-# Google search results) and in your feed.xml site description.
-  Hagiiの日記と製作物まとめです。
-  どんなネタになるかは今後のお楽しみ…?
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 baseurl: "/my-site" # the subpath of your site, e.g. /blog
 url: "https://hagiayato.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: hagiPublic
-github_username:  hagiayato
+twitter_username: jekyllrb
+github_username:  hagiPublic
 
 # Build settings
 theme: minima
