--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,8 @@ baseurl: "/my-site" # the subpath of your site, e.g. /blog
 url: "https://hagiayato.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: hagiPublic
 github_username: hagiayato
-google_analytics: GTM-N34P2G2
+# Google Analytisc4
+google_analytics4: G-D2XL34QBEQ
 
 # Build settings
 theme: minima
