Googleアナリティクス対応

--- a/_config.yml
+++ b/_config.yml
@@ -27,10 +27,8 @@ baseurl: "/my-site" # the subpath of your site, e.g. /blog
 url: "https://hagiayato.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: hagiPublic
 github_username: hagiayato
-# Google Analytisc4
-# 下の行をコメントアウトすると無効化
-# 測定IDはgoogle-analytics4.htmlに直書き
-google_analytics4: enable
+# Google Analytisc
+google_analytics: UA-181538826-2
 
 # Build settings
 theme: minima
