--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Hagi Works
+title: HA Works
 email: h8a9g11i☆gmail.com※☆→@
 description: >- # this means to ignore newlines until "baseurl:"
   あるエンジニアの日記と製作物まとめです。
