--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,10 @@ twitter_username: hagiPublic
 github_username: hagiayato
 # Google Analytisc
 google_analytics: UA-185637831-1
+# language
+lang: ja-JP
+# sidebar
+sidebar: tocjs
 
 # Build settings
 theme: minima
