--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ environment: production
 
 # paginate
 paginate: 5
-paginate_path: "/my-site/page:num/"
+paginate_path: "/page:num/"
 # タグページ
 tag_page_layout: tag_page
 tag_page_dir: tag
