--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ github_username: hagiayato
 google_analytics: UA-185637831-1
 # language
 lang: ja-JP
+timezone: Asia/Tokyo
 
 # Build settings
 theme: minima
