GA4移行とコード追加

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ url: "https://hagiayato.github.io/" # the base hostname & protocol for your site
 twitter_username: hagiPublic
 github_username: hagiayato
 # Google Analytisc
-google_analytics: UA-185637831-1
+google_analytics: G-X6WZ582787
 # language
 lang: ja-JP
 timezone: Asia/Tokyo
