--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Build with Jekyll
-        # baseurl は GitHub Pages の設定に合わせて自動注入されます
-        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+        # ビルド処理
+        run: bundle exec jekyll build
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
